更新 .gitignore：添加敏感信息文件保护
- 排除 .env 文件及其变体
- 排除 OpenClaw auth-profiles.json
- 排除证书、密钥和凭证文件
- 排除 IDE 和编辑器配置文件
- 排除日志文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,37 @@ tmp/
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Sensitive files - Environment variables and API keys
+.env
+.env.local
+.env.*.local
+.env.development
+.env.production
+.env.test
+
+# OpenClaw auth files
+auth-profiles.json
+**/auth-profiles.json
+
+# Secrets and credentials
+*.pem
+*.key
+secrets.json
+credentials.json
+
+# IDE and editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+log/
+
+# OS files
+Thumbs.db
+.DS_Store?
